<resources>
    <string name="app_name">Brastlewark Directory</string>
    <string name="action_settings">Settings</string>
    <string name="tittle_toolbar_main">Gnomes</string>
    <string name="title_activity_gnomes_detail">Gnome Detail</string>
    <string name="fb_action_filter_gnomes">Filtrar nomos</string>
    <string name="error_there_was_an_error_please_retry_later">There was an error, please retry later</string>
    <!--Gnomes detail-->
    <string name="textview_age">Edad:</string>
    <string name="textview_weight">Weight:</string>
    <string name="textview_height">Height:</string>
    <string name="textview_hair_color">Hair Color:</string>
    <string name="textview_professions">Professions:</string>
    <string name="textview_friends">Amigos:</string>


</resources>
